Добавление функции хранения депозита

--- a/DzhuMenuWebApp/Pages/Index.cshtml
+++ b/DzhuMenuWebApp/Pages/Index.cshtml
@@ -56,7 +56,24 @@
         
         <button id="export">Открыть в outlook</button>
         
-        <span>Сумма: <span id="sum"></span></span>
+        <table>
+            <tr>
+                <td>Сумма:</td>
+                <td><span id="sum">0</span> р.</td>
+            </tr>
+            <tr>
+                <td>Дневной остаток:</td>
+                <td>390 - <span id="sum2">0</span> = <span id="remains">0</span> р.</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><button id="to_deposit">▼ Внести на депозит ▼</button></td>
+            </tr>
+            <tr>
+                <td>Текущий депозит:</td>
+                <td><span id="deposit"></span> р.</td>
+            </tr>
+        </table>
     </div>
 </div>
 
