--- a/DzhuMenuWebApp/Pages/Index.cshtml
+++ b/DzhuMenuWebApp/Pages/Index.cshtml
@@ -39,23 +39,25 @@
         }
         </tbody>
     </table>
-    
+
     <div class="pw">
         <h2>Превью заказа</h2>
-        
+
         <div class="additional-data">
             <label>
                 Время заказа: <input type="time" id="time"/>
             </label>
             <label>
-                Заказчик: <input id="username"/>
+                Заказчик
+                <sup title="Сохранятся в локальном хранилище браузера. Сохраненное значение пропадет при его очистке.">⚠</sup>
+                : <input id="username"/>
             </label>
         </div>
-        
+
         <textarea id="preview"></textarea>
-        
+
         <button id="export">Открыть в outlook</button>
-        
+
         <table>
             <tr>
                 <td>Сумма:</td>
@@ -67,10 +69,16 @@
             </tr>
             <tr>
                 <td></td>
-                <td><button id="to_deposit">▼ Внести на депозит ▼</button></td>
+                <td>
+                    <button id="to_deposit">▼ Внести на депозит ▼</button>
+                </td>
             </tr>
             <tr>
-                <td>Текущий депозит:</td>
+                <td>
+                    Текущий депозит
+                    <sup title="Сохранятся в локальном хранилище браузера. Сохраненное значение пропадет при его очистке.">⚠</sup>
+                    :
+                </td>
                 <td><span id="deposit"></span> р.</td>
             </tr>
         </table>
