Добавлена функция приписывания цен

--- a/DzhuMenuWebApp/Pages/Index.cshtml
+++ b/DzhuMenuWebApp/Pages/Index.cshtml
@@ -52,6 +52,11 @@
                 <sup title="Сохранятся в локальном хранилище браузера. Сохраненное значение пропадет при его очистке.">⚠</sup>
                 : <input id="username"/>
             </label>
+            <label>
+                Приписать цены
+                <sup title="Цены могут распознаваться неправильно. Пожалуйста, сверяйтесь с внутренним чувством цен и картинкой, чтобы не вводить Джузеппе в заблуждение. И да, этот флажок тоже сохраняется.">⚠</sup>
+                : <input id="addCosts" type="checkbox"/>
+            </label>
         </div>
 
         <textarea id="preview"></textarea>
